[tool.poetry]
name = "telegram-wordcloud"
version = "0.1.0"
description = ""
authors = ["Alan Shum <kshum@linkedin.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyhanlp = "^0.1.66"
pandas = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
